# OpenCV-Tutorial-cpp

./: CMakeLists.txt  LoadAndDisplayImage.cpp  Play_VideoFromFileOrCamera.cpp  README.md  main.cpp
01. Load & Display Image/: Create_BlankImageAndDisplay.cpp
02. Play Video from File or Camera/: Play_VideoFromFileOrCamera.cpp
03. Save Images & Videos to File/: Save_ImagesAndVideosToFile.cpp  Save_VideoToFile.cpp
04. Change Brightness/: ChangeBrightnessImg.cpp
06. Histogram Equalization/: HistogramEqualizationGrayscaleImage.cpp
07-1. Homogeneous Blur/: HomogeneousBlurVideo.cpp
07-3. Invert Images and Videos/: InvertImages.cpp  InvertVideos.cpp
08-1. Erode Images and Videos/: ErodeImages.cpp
08-2. Dilate Images and Videos/: DilateVideos.cpp
09. Trackbar/: HowToAddTrackbar.cpp  TrackbarCallbackFunction.cpp
1. Load & Display Image/: Create_BlankImageAndDisplay.cpp  LoadAndDisplayImage.cpp
1.Load & Display Image/: Create_BlankImageAndDisplay.cpp  LoadAndDisplayImage.cpp
10. Detect Mouse Clicks and Moves/: DetectMouseClicksWhilePressingKey.cpp  DetectMouseClicksandMoves.cpp
11. Rotate Image & Video/: RotateImage.cpp  RotateImageCallback.cpp  RotateVideo.cpp
12. Color Detection & Object Tracking/: ColorDetection.cpp  ColorTracking.cpp
13. Shape Detection & Tracking using Contours/: DetectingContours.cpp  FindingContours.cpp  TrackingTrianglesVideo.cpp
2. Play Video from File or Camera/: CaptureAndPlayVideoFromCameraOrWebcam.cpp
4. Change Brightness/: ChangeBrightnessVideo.cpp
5. Change Contrast/: ChangeContrastImg.cpp  ChangeContrastVideo.cpp
(+7 files in other folders)
